fixed WEB-148 Bar covers most of submit button

--- a/scct/web/css/mileagecards.css
+++ b/scct/web/css/mileagecards.css
@@ -1,8 +1,3 @@
-#mileage_card_form {
-    margin-right: 9%;
-    margin-top: 3%;
-}
-
 #mileage_card_submit_btn {
     margin-top: 2%;
     margin-right: 2%;
@@ -47,14 +42,27 @@ div[id^=modalContent] .wrap #top-wrapper {
 	padding:6px 10px;
 }
 #mileageCardGridview .kv-grid-container{
-	max-height:58vh;
+	max-height:60vh;
 	overflow-y:auto;
 }
-/*responsive css* for table*/
+/*mileageCard view page*/
+.mileagecard-view table{
+	margin-bottom:0px;
+}
+.mileagecard-view p{
+	margin-top:10px;
+}
+#SundayEntry,#MondayEntry,#TuesdayEntry,#WednesdayEntry,#ThursdayEntry,#FridayEntry,#SaturdayEntry{
+	overflow:auto;
+}
+.mileagecard-view .footerabove{
+	display:none;
+}
+/*responsive css for table*/
 @media only screen 
 and (min-width : 1360px) {
 #mileageCardGridview .kv-grid-container{
-	max-height:40vh;
+	max-height:44vh;
 }
 }
 @media only screen 
